--- a/website/templates/admin/gradesheet/grade_summary.html
+++ b/website/templates/admin/gradesheet/grade_summary.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background: rgb(245,245,245);"><div class="center-div" id="gold-bg">
-    <a href='/home/'>
+    <a href='/{{ where }}/'>
         <button>BACK</button>
     </a>
     {% set score_arr = [] %}
