--- a/website/templates/admin/home.html
+++ b/website/templates/admin/home.html
@@ -24,9 +24,6 @@
         });
     </script>
     <div class='display_grid'>
-        {% set today = [] %}
-        {% set incoming = [] %}
-        {% set today = [] %}
         <h1>Today</h1>
         {% if defenses %}
             {% for defense in defenses %}
@@ -71,12 +68,12 @@
                         </table>
                         <table class = "tableButton no_border">
                             <th class = "no_border sep_10">
-                                <a href="/grade_summary/{{ defense.id }}">
+                                <a href="/grade_summary/{{ defense.id }}/home">
                                     <button class = "but2" >Grade Summary</button>
                                 </a>
                             </th>
                             <th class = "no_border sep_10">
-                                <a href="/comment_summary/{{ defense.id }}">
+                                <a href="/comment_summary/{{ defense.id }}/home">
                                     <button class = "but2" >Comment Summary</button>
                                 </a>
                             </th>
