--- a/website/templates/user/grading/indiv_sheet.html
+++ b/website/templates/user/grading/indiv_sheet.html
@@ -14,10 +14,7 @@
 		{% set x = 0 %}
 		<form method='POST'>
 			<div class="topnav">
-				<a class="" href="/user_home">Back</a>
-				<a class='active' href="#indiv">Individual</a>
-				<a href="/grading/group/{{ defense.id }}">Group</a>
-				<a href="/grading/comment/{{ defense.id }}">Comment</a>
+				<a class="active" href="/user_home">Back</a>
 			</div>
 			<div class="parent">
 				<div class="div1"> 
