--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -356,6 +356,24 @@ td{
 }
 
 
+.but2{
+	padding: 0px;
+	width: 100%;
+	height: 100%;
+	border-radius: 0px;
+	background-color: white; 
+	color: black; 
+	background-color: #E0E0E0;
+	border: 2px solid #E0E0E0;
+	cursor: pointer;
+}
+
+.but2:hover {
+	width: 100%;
+	height: 100%;
+	background-color: white;
+}
+
 .display_grid .card {
     position: relative;
     display: flex;
@@ -627,3 +645,178 @@ td{
     font-weight: bold;
     color:#173826;
 }
+
+.display_grid .schedule_div {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 20px;
+    min-height: 200px;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    height: fit-content;
+    border-left: 10px solid #173826;
+    padding: 20px;
+    padding-bottom: 30px;
+}
+
+.schedule_div .time_info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 15%;
+    min-width: 250px;
+    border-right: 2px solid rgba(128, 128, 128, 0.726);
+    padding-right: 20px;
+    padding-bottom: 30px;
+}
+
+
+.schedule_div .defense_date {
+    color: #173826;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.schedule_div .defense_time {
+    font-size: 20px;
+}
+
+.schedule_div .summary_buttons {
+    position: relative;
+    margin-top: 70px;
+}
+
+.schedule_div .summary_buttons button {
+    font-size: 20px;
+    border: 1px solid;
+    border-radius: 2px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    margin-top: 10px;
+    margin-right: 20px;
+    background-color: rgb(248, 246, 246);
+}
+
+.schedule_div .summary_buttons button:hover {
+    background-color: #deeed8;
+}
+
+.schedule_div .defense_info {
+    position: relative;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.schedule_div .defense_info .project_div {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    padding-right: 70px;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.726);
+}
+
+.schedule_div .defense_info .project_div .project_title {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.schedule_div .defense_info .project_div .group_name {
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+.schedule_div .defense_info .more_info {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.schedule_div .defense_info .more_info .panel_div {
+    display: inherit;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.schedule_div .defense_info .more_info .panel_div {
+    border-right: 2px solid rgba(128, 128, 128, 0.726);
+}
+
+.defense_info .more_info .panel_header {
+    font-size: 30;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+
+.defense_info .more_info .panel_div .headpanel_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.defense_info .more_info .panel_div .copanel_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.defense_info .more_info .panel_div .panel_name {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.defense_info .more_info .panel_div .defense_role {
+    color: rgba(128, 128, 128, 0.726)
+}
+
+
+.schedule_div .defense_info .more_info .gradesheet_div {
+    display: inherit;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.schedule_div .defense_info .more_info .gradesheet_div button {
+    font-size: 15px;
+    width: 200px;
+}
+
+.gradesheet_header {
+    margin-bottom: 10px;
+}
+
+.indivsheet_div {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+.groupsheet_div {
+    display: flex;
+    gap: 20px;
+}
+
+.gradesheet_div button {
+    font-size: 20px;
+    border: 1px solid;
+    border-radius: 2px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(248, 246, 246);
+}
+
+.gradesheet_div button:hover {
+    background-color: #deeed8;
+}
+
