--- a/website/templates/user/grading/comment_sheet.html
+++ b/website/templates/user/grading/comment_sheet.html
@@ -15,10 +15,7 @@
 		{% set x = 0 %}
 		<form method='POST'>
 			<div class="topnav">
-				<a class="" href="/user_home">Back</a>
-				<a href="/grading/indiv/{{ defense.id }}">Individual</a>
-				<a href="/grading/group/{{ defense.id }}">Group</a>
-				<a href class='active'>Comment</a>
+				<a class="active" href="/user_home">Back</a>
 			</div>
 			<div class="parent">
 				<div class="div1"> 
