--- a/website/templates/user/grading/group_sheet.html
+++ b/website/templates/user/grading/group_sheet.html
@@ -13,10 +13,7 @@
 	</style>
 	<body>
 		<div class="topnav">
-			<a class="" href="/user_home">Back</a>
-			<a href="/grading/indiv/{{ defense.id }}">Individual</a>
-			<a class='active' href="">Group</a>
-			<a href="/grading/comment/{{ defense.id }}">Comment</a>
+			<a class="active" href="/user_home">Back</a>
 		</div>
 		<form method='POST'>
 			<div class="parent">
