--- a/website/templates/user/students_u.html
+++ b/website/templates/user/students_u.html
@@ -4,30 +4,50 @@
 	Students
 {% endblock %}
 {% block content %}
-    <div class='display_grid'>
-        {% if students %}
-            {% for student in students %}
-                <div class='div1'>
-					<table>
-						<th class = "tb_desc">Student No.:</th>
-						<td>{{ student.stud_no }}</td>
-						<tr>
-						<th class = "tb_desc">Name:</th> 
-						<td>{{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</td>
-						<tr>
-						<th class = "tb_desc">Group:</th> 
-						<td>{{ student.group_id }} - {{ student.group.name }}</td>
-						<tr>
-					</table>
-					<table class = "no_border">
-						<td class = "no_border sep_20">
-						<td class = "no_border sep_20">
-						<td class = "no_border sep_20">	
-					</table>
-					<br>
-                </div>
-                
-            {% endfor %}
-        {% endif %}
-    </div>
+<style>
+	#student_ops {
+		position: absolute;
+		z-index: 2;
+		top: 2px;
+		right: -25px;
+	}
+</style>
+<div class='student_grid'>
+	{% if students %}
+		{% for student in students %}
+		<div class='student_card'>
+			<div class='stud_info'>
+				<div class="imageBox">
+					<div class="imageInn">
+						<img src="{{ url_for('static', filename='img_avatar.png') }}" alt="..." width="65" class="student_pic">
+					</div>
+				</div>
+				<div class="pic_div">
+					<a href="/edit_student/{{ student.stud_no }}">
+					</a>
+				</div>
+				<div class='student_name'>
+					<div class='lastname_div'>
+						{{ student.last_name }}, 
+					</div>
+					<div class='firstname_div'>
+						{{ student.first_name }} {{ student.middle_in }}
+					</div>
+				</div>
+				<div class='student_no'>
+					{{ student.stud_no }}
+				</div>
+			</div>
+			<div class='group_info'>
+				<h5>Group</h5>
+				<div class='groupname_div'>
+					{{ student.group.name }}
+				</div>
+			</div>
+			
+		</div>
+			
+		{% endfor %}
+	{% endif %}
+</div>
 {% endblock %}
